// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Highlights renders correctly 1`] = `
<div>
  <div
    class="col-md-3"
  >
    <div
      class="sidebar-filters"
    >
      <div
        class="filter-header"
      >
        <h3>
          refine-by
        </h3>
      </div>
      <div
        class="filter-checkbox-container"
      >
        <label>
          <input
            class="filter-checkbox"
            name="Key Highlights"
            type="checkbox"
            value="keyHighlights"
          />
          <span
            class="filter-checkbox-label"
          >
            Key Highlights
          </span>
        </label>
      </div>
      <div
        class="filter-checkbox-container"
      >
        <label>
          <input
            class="filter-checkbox"
            name="Important Changes"
            type="checkbox"
            value="importantChanges"
          />
          <span
            class="filter-checkbox-label"
          >
            Important Changes
          </span>
        </label>
      </div>
      <div
        class="filter-checkbox-container"
      >
        <label>
          <input
            class="filter-checkbox"
            name="Known Issues"
            type="checkbox"
            value="knownIssues"
          />
          <span
            class="filter-checkbox-label"
          >
            Known Issues
          </span>
        </label>
      </div>
      <div
        class="filter-checkbox-container"
      >
        <label>
          <input
            class="filter-checkbox"
            name="Security"
            type="checkbox"
            value="security"
          />
          <span
            class="filter-checkbox-label"
          >
            Security
          </span>
        </label>
      </div>
    </div>
  </div>
  <div
    class="col-md-9"
  >
    <h2
      id="highlights"
    >
      highlights
    </h2>
    <h5
      class="secondary-text-color section-subtitle"
    >
      Description for Highlights tab.
    </h5>
    <div
      class="results-count"
    >
      x-results
    </div>
    <table
      class="table highlights-table table-autofit table-list"
      role="table"
    >
      <thead>
        <tr>
          <th
            class="lfr-released-column"
          >
            date
             
            <svg
              class="arrow-up desc lexicon-icon sorting-indicator"
              role="button"
            >
              <use
                xlink:href="#arrow-up"
              />
            </svg>
          </th>
          <th
            class="lfr-details-column"
          >
            release
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="journal-article-row"
          id="118267960"
        >
          <td
            class="lfr-released-column"
          >
            Mar 6, 2019
          </td>
          <td
            class="lfr-details-column"
          >
            <div
              class="details "
            >
              Content Text
            </div>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="118267952"
        >
          <td
            class="lfr-released-column"
          >
            Mar 1, 2019
          </td>
          <td
            class="lfr-details-column"
          >
            <div
              class="details "
            >
              Content 2 Text
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Highlights renders no results correctly 1`] = `
<div>
  <div
    class="col-md-3"
  >
    <div
      class="sidebar-filters"
    >
      <div
        class="filter-header"
      >
        <h3>
          refine-by
        </h3>
      </div>
      <div
        class="filter-checkbox-container"
      >
        <label>
          <input
            class="filter-checkbox"
            name="Key Highlights"
            type="checkbox"
            value="keyHighlights"
          />
          <span
            class="filter-checkbox-label"
          >
            Key Highlights
          </span>
        </label>
      </div>
      <div
        class="filter-checkbox-container"
      >
        <label>
          <input
            class="filter-checkbox"
            name="Important Changes"
            type="checkbox"
            value="importantChanges"
          />
          <span
            class="filter-checkbox-label"
          >
            Important Changes
          </span>
        </label>
      </div>
      <div
        class="filter-checkbox-container"
      >
        <label>
          <input
            class="filter-checkbox"
            name="Known Issues"
            type="checkbox"
            value="knownIssues"
          />
          <span
            class="filter-checkbox-label"
          >
            Known Issues
          </span>
        </label>
      </div>
      <div
        class="filter-checkbox-container"
      >
        <label>
          <input
            class="filter-checkbox"
            name="Security"
            type="checkbox"
            value="security"
          />
          <span
            class="filter-checkbox-label"
          >
            Security
          </span>
        </label>
      </div>
    </div>
  </div>
  <div
    class="col-md-9"
  >
    <h2
      id="highlights"
    >
      highlights
    </h2>
    <h5
      class="secondary-text-color section-subtitle"
    >
      Description for No Results Highlights tab.
    </h5>
    <div
      class="results-count"
    >
      x-results
    </div>
    <table
      class="table highlights-table table-autofit table-list"
      role="table"
    >
      <thead>
        <tr>
          <th
            class="lfr-released-column"
          >
            date
             
            <svg
              class="arrow-up desc lexicon-icon sorting-indicator"
              role="button"
            >
              <use
                xlink:href="#arrow-up"
              />
            </svg>
          </th>
          <th
            class="lfr-details-column"
          >
            release
          </th>
        </tr>
      </thead>
      <tbody />
    </table>
    <div
      class="no-results"
    >
      no-results-found-to-match-your-selection
      <h5
        class="secondary-text-color"
      >
        try-modifying-your-criteria
      </h5>
    </div>
  </div>
</div>
`;
